<resources>
    <string name="app_name">Cuida tu alergia</string>
    <string name="Inicio">Localizacion</string>
    <string name="Acerca">Saber más</string>
    <string name="Consejos">Consejos</string>
    <string name="Emergencia">Llamada de emergencia</string>
    <string name="Fin">Salir</string>
    <string name="TAG">Cuida_tu_alergia</string>
    <string name="title_activity_maps">Map</string>
    <string name="ERRORMSG">ERROR</string>
    <string name="JSON_read_success">Cargando...</string>
    <string name="Preferencias">Preferencias</string>
</resources>
